--- a/generate_learning_target.ipynb
+++ b/generate_learning_target.ipynb
@@ -44,9 +44,9 @@
     "rows_2 = []\n",
     "rows_3 = []\n",
     "for i in range(len(df_1)):\n",
-    "    rows_1.append([i, ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
-    "    rows_2.append([i, ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
-    "    rows_3.append([i, ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
+    "    rows_1.append([df_1['sequenceID'][i], ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
+    "    rows_2.append([df_1['sequenceID'][i], ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
+    "    rows_3.append([df_1['sequenceID'][i], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
     "\n",
     "column_names = [\"seqID\", \"small_end\", \"big_end\"]\n",
     "pd.DataFrame(rows_1, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_fold1.csv\", index=False)\n",
