--- a/lambda_learning_BIC_same_as_paper.ipynb
+++ b/lambda_learning_BIC_same_as_paper.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # get functions from OPART.ipynb\n",
-    "# %run OPART.ipynb"
+    "import numpy as np\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
    ]
   },
   {
@@ -16,21 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
     "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "header = ['sequenceID', \"log_lambda\", 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn',]\n",
-    "# header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
     "for i in range(len(seqs)):\n",
     "    # generate data\n",
     "    sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
@@ -38,6 +27,7 @@
     "\n",
     "    # calculate lambda\n",
     "    lda = np.log(sequence_length)\n",
+    "    lda = 10**(min([i/2 for i in range(-10, 11)], key=lambda x: abs(x - np.log10(lda))))\n",
     "\n",
     "    # get total labels\n",
     "    fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
@@ -57,10 +47,8 @@
     "    row.append(err_2[1])\n",
     "    row.append(err_2[2])\n",
     "    row.append(err_2[3])\n",
-    "    # row.append(sum(err_1))\n",
-    "    # row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('1.genome_learning_output/BIC_details.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/BIC_paper.csv', header, row)"
    ]
   }
  ],
