--- a/lambda_learning_linear.ipynb
+++ b/lambda_learning_linear.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x299f9aafcf0>"
+       "<torch._C.Generator at 0x270439b7330>"
       ]
      },
      "execution_count": 1,
@@ -22,8 +22,9 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart, SquaredHingeLoss\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, error_count, write_to_csv, opart, SquaredHingeLoss\n",
     "\n",
+    "np.set_printoptions(precision=10)\n",
     "np.random.seed(123)\n",
     "torch.manual_seed(123)"
    ]
@@ -87,7 +88,7 @@
     "optimizer2 = optim.Adam(model2.parameters(), lr=0.01, amsgrad=True)\n",
     "\n",
     "# Training loop\n",
-    "for epoch in range(5000):\n",
+    "for epoch in range(2000):\n",
     "    # Forward pass\n",
     "    outputs1 = model1(data)\n",
     "    outputs2 = model2(data)\n",
@@ -95,8 +96,6 @@
     "    # Compute the custom loss\n",
     "    loss_1 = squared_hinge_loss(outputs1, y1)\n",
     "    loss_2 = squared_hinge_loss(outputs2, y2)\n",
-    "    # loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
-    "    # loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    optimizer1.zero_grad()\n",
@@ -105,24 +104,7 @@
     "\n",
     "    optimizer2.zero_grad()\n",
     "    loss_2.backward()\n",
-    "    optimizer2.step()\n",
-    "\n",
-    "    # # record\n",
-    "    # record_loss1_test.append(loss_1_test.item())\n",
-    "    # record_loss2_test.append(loss_2_test.item())\n",
-    "\n",
-    "    # # save models\n",
-    "    # if loss_1_test < min_loss_1_test:\n",
-    "    #     min_loss_1_test = loss_1_test\n",
-    "    #     torch.save(model1.state_dict(), 'saved_models/model1_linear_best.pth')\n",
-    "    \n",
-    "    # if loss_2_test < min_loss_2_test:\n",
-    "    #     min_loss_2_test = loss_2_test\n",
-    "    #     torch.save(model2.state_dict(), 'saved_models/model2_linear_best.pth')\n",
-    "    \n",
-    "    # # Print the loss every 100 epochs\n",
-    "    # if (epoch) % 500 == 0:\n",
-    "    #     print(f'Epoch [{epoch:5d}/{epochs}], Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
+    "    optimizer2.step()"
    ]
   },
   {
@@ -182,25 +164,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def map_to_closest_values(arr):\n",
+    "    closest_values = np.array([-5, -4.5, -4, -3.5, -3, -2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5])\n",
+    "    idx = np.abs(arr[:, None] - closest_values).argmin(axis=1)\n",
+    "    return closest_values[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ldas1 = 10**map_to_closest_values(np.log10(ldas1))\n",
+    "# ldas2 = 10**map_to_closest_values(np.log10(ldas2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
     "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
-    "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
+    "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn',]\n",
     "\n",
     "for i in range(len(seqs)):\n",
     "    # generate data\n",
     "    sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
     "    sequence_length = len(sequence)-1\n",
     "\n",
-    "    # vectors of cumulative sums\n",
-    "    y, z = get_cumsum(sequence)\n",
-    "\n",
     "    # get total labels\n",
     "    fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
     "    fold2_total_labels = len(neg_start_2) + len(pos_start_2)\n",
     "\n",
     "    # run each lambda and record it into csv file\n",
-    "    row  = [i, fold1_total_labels, fold2_total_labels]\n",
+    "    row = [seqs[i][0], fold1_total_labels, fold2_total_labels]\n",
     "\n",
     "    chpnt_fold1 = opart(10**ldas2[i], sequence)\n",
     "    chpnt_fold2 = opart(10**ldas1[i], sequence)\n",
@@ -208,8 +209,14 @@
     "    err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
     "    \n",
-    "    row.append(sum(err_1))\n",
-    "    row.append(sum(err_2))\n",
+    "    row.append(err_1[0])\n",
+    "    row.append(err_1[1])\n",
+    "    row.append(err_1[2])\n",
+    "    row.append(err_1[3])\n",
+    "    row.append(err_2[0])\n",
+    "    row.append(err_2[1])\n",
+    "    row.append(err_2[2])\n",
+    "    row.append(err_2[3])\n",
     "\n",
     "    write_to_csv('1.genome_learning_output/linear.csv', header, row)"
    ]
