--- a/generate_learning_target.ipynb
+++ b/generate_learning_target.ipynb
@@ -17,21 +17,8 @@
    "outputs": [],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df_1 = pd.read_csv('1.genome_learning_data/errors_fold1.csv')\n",
-    "df_2 = pd.read_csv('1.genome_learning_data/errors_fold2.csv')\n",
-    "df_3 = pd.read_csv('1.genome_learning_data/errors_total.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_min_indices(array):\n",
-    "    min_index = np.argmin(array)\n",
-    "    max_index = len(array) - 1 - np.argmin(array[::-1])\n",
-    "    return np.array([min_index, max_index])"
+    "df_1 = pd.read_csv('1.genome_learning_data/errors_fold1_base_e.csv')\n",
+    "df_2 = pd.read_csv('1.genome_learning_data/errors_fold2_base_e.csv')"
    ]
   },
   {
@@ -40,18 +27,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows_1 = []\n",
-    "rows_2 = []\n",
-    "rows_3 = []\n",
-    "for i in range(len(df_1)):\n",
-    "    rows_1.append([df_1['sequenceID'][i], ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_1.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
-    "    rows_2.append([df_1['sequenceID'][i], ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_2.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
-    "    rows_3.append([df_1['sequenceID'][i], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[0], ((find_min_indices(df_3.iloc[i].to_numpy()[1:]) - 10)*0.5)[1]])\n",
+    "df_target_1 = pd.DataFrame(columns=['sequenceID', 'small_end', 'big_end'])\n",
+    "df_target_2 = pd.DataFrame(columns=['sequenceID', 'small_end', 'big_end'])\n",
     "\n",
-    "column_names = [\"seqID\", \"small_end\", \"big_end\"]\n",
-    "pd.DataFrame(rows_1, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_fold1.csv\", index=False)\n",
-    "pd.DataFrame(rows_2, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_fold2.csv\", index=False)\n",
-    "pd.DataFrame(rows_3, columns=column_names).to_csv(\"1.genome_learning_data/target_lambda_bothfold.csv\", index=False)"
+    "# Create DataFrame\n",
+    "rows = []\n",
+    "for index, row in df_1.iterrows():\n",
+    "    min_value_col_start = row.iloc[1:].idxmin()\n",
+    "    min_value_col_end = row.iloc[1:][::-1].idxmin()\n",
+    "    rows.append({'sequenceID': row['sequenceID'], \n",
+    "                 'small_end': min_value_col_start, \n",
+    "                 'big_end': min_value_col_end})\n",
+    "\n",
+    "df_target_1 = pd.DataFrame(rows)\n",
+    "\n",
+    "# Create DataFrame\n",
+    "rows = []\n",
+    "for index, row in df_2.iterrows():\n",
+    "    min_value_col_start = row.iloc[1:].idxmin()\n",
+    "    min_value_col_end = row.iloc[1:][::-1].idxmin()\n",
+    "    rows.append({'sequenceID': row['sequenceID'], \n",
+    "                 'small_end': min_value_col_start, \n",
+    "                 'big_end': min_value_col_end})\n",
+    "\n",
+    "df_target_2 = pd.DataFrame(rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_target_1.to_csv('1.genome_learning_data/target_lambda_fold1_base_e.csv', index=False)\n",
+    "df_target_2.to_csv('1.genome_learning_data/target_lambda_fold2_base_e.csv', index=False)"
    ]
   }
  ],
