--- a/lambda_learning_linear.ipynb
+++ b/lambda_learning_linear.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x270439b7330>"
+       "<torch._C.Generator at 0x24d6ebbb330>"
       ]
      },
      "execution_count": 1,
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, error_count, write_to_csv, opart, SquaredHingeLoss\n",
     "\n",
-    "np.set_printoptions(precision=10)\n",
+    "np.set_printoptions(precision=3)\n",
     "np.random.seed(123)\n",
     "torch.manual_seed(123)"
    ]
@@ -77,18 +77,47 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch     0, Loss_1:   2.3556, Loss_1_test:   2.1364, Loss_2:   1.8813, Loss_2_test:   1.9977\n",
+      "Epoch    50, Loss_1:   2.0690, Loss_1_test:   1.9265, Loss_2:   1.7379, Loss_2_test:   1.7776\n",
+      "Epoch   100, Loss_1:   1.8537, Loss_1_test:   1.7819, Loss_2:   1.6439, Loss_2_test:   1.6182\n",
+      "Epoch   150, Loss_1:   1.6919, Loss_1_test:   1.6846, Loss_2:   1.5778, Loss_2_test:   1.4968\n",
+      "Epoch   200, Loss_1:   1.5613, Loss_1_test:   1.6117, Loss_2:   1.5315, Loss_2_test:   1.4032\n",
+      "Epoch   250, Loss_1:   1.4506, Loss_1_test:   1.5526, Loss_2:   1.5162, Loss_2_test:   1.3562\n",
+      "Epoch   300, Loss_1:   1.3610, Loss_1_test:   1.5093, Loss_2:   1.5126, Loss_2_test:   1.3360\n",
+      "Epoch   350, Loss_1:   1.3113, Loss_1_test:   1.5017, Loss_2:   1.5115, Loss_2_test:   1.3251\n",
+      "Epoch   400, Loss_1:   1.2840, Loss_1_test:   1.5101, Loss_2:   1.5108, Loss_2_test:   1.3175\n",
+      "Epoch   450, Loss_1:   1.2627, Loss_1_test:   1.5215, Loss_2:   1.5105, Loss_2_test:   1.3117\n",
+      "Epoch   500, Loss_1:   1.2451, Loss_1_test:   1.5346, Loss_2:   1.5103, Loss_2_test:   1.3083\n",
+      "Epoch   550, Loss_1:   1.2308, Loss_1_test:   1.5489, Loss_2:   1.5102, Loss_2_test:   1.3083\n",
+      "Epoch   600, Loss_1:   1.2194, Loss_1_test:   1.5639, Loss_2:   1.5100, Loss_2_test:   1.3083\n",
+      "Epoch   650, Loss_1:   1.2105, Loss_1_test:   1.5790, Loss_2:   1.5099, Loss_2_test:   1.3085\n",
+      "Epoch   700, Loss_1:   1.2037, Loss_1_test:   1.5938, Loss_2:   1.5098, Loss_2_test:   1.3086\n",
+      "Epoch   750, Loss_1:   1.1985, Loss_1_test:   1.6080, Loss_2:   1.5097, Loss_2_test:   1.3087\n",
+      "Epoch   800, Loss_1:   1.1947, Loss_1_test:   1.6212, Loss_2:   1.5096, Loss_2_test:   1.3089\n",
+      "Epoch   850, Loss_1:   1.1919, Loss_1_test:   1.6333, Loss_2:   1.5094, Loss_2_test:   1.3090\n",
+      "Epoch   900, Loss_1:   1.1899, Loss_1_test:   1.6443, Loss_2:   1.5093, Loss_2_test:   1.3092\n",
+      "Epoch   950, Loss_1:   1.1885, Loss_1_test:   1.6540, Loss_2:   1.5091, Loss_2_test:   1.3093\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
     "model1 = LinearModel(input_size = 1)\n",
     "model2 = LinearModel(input_size = 1)\n",
     "\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer1 = optim.Adam(model1.parameters(), lr=0.01, amsgrad=True)\n",
-    "optimizer2 = optim.Adam(model2.parameters(), lr=0.01, amsgrad=True)\n",
+    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001)\n",
+    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001)\n",
     "\n",
     "# Training loop\n",
-    "for epoch in range(2000):\n",
+    "min_loss_1_test = float('inf')\n",
+    "min_loss_2_test = float('inf')\n",
+    "for epoch in range(1000):\n",
     "    # Forward pass\n",
     "    outputs1 = model1(data)\n",
     "    outputs2 = model2(data)\n",
@@ -96,6 +125,9 @@
     "    # Compute the custom loss\n",
     "    loss_1 = squared_hinge_loss(outputs1, y1)\n",
     "    loss_2 = squared_hinge_loss(outputs2, y2)\n",
+    "\n",
+    "    loss_1_test = squared_hinge_loss(outputs1, y2)\n",
+    "    loss_2_test = squared_hinge_loss(outputs2, y1)\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    optimizer1.zero_grad()\n",
@@ -104,7 +136,20 @@
     "\n",
     "    optimizer2.zero_grad()\n",
     "    loss_2.backward()\n",
-    "    optimizer2.step()"
+    "    optimizer2.step()\n",
+    "\n",
+    "    # save models\n",
+    "    if loss_1_test < min_loss_1_test:\n",
+    "        min_loss_1_test = loss_1_test\n",
+    "        torch.save(model1.state_dict(), '1.genome_saved_models/model1_linear_best.pth')\n",
+    "    \n",
+    "    if loss_2_test < min_loss_2_test:\n",
+    "        min_loss_2_test = loss_2_test\n",
+    "        torch.save(model2.state_dict(), '1.genome_saved_models/model2_linear_best.pth')\n",
+    "    \n",
+    "    # Print the loss every 100 epochs\n",
+    "    if (epoch) % 50 == 0:\n",
+    "        print(f'Epoch {epoch:5d}, Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
    ]
   },
   {
@@ -113,8 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model1.state_dict(), '1.genome_saved_models/model1_linear_best.pth')\n",
-    "torch.save(model2.state_dict(), '1.genome_saved_models/model2_linear_best.pth')"
+    "# torch.save(model1.state_dict(), '1.genome_saved_models/model1_linear_best.pth')\n",
+    "# torch.save(model2.state_dict(), '1.genome_saved_models/model2_linear_best.pth')"
    ]
   },
   {
@@ -164,28 +209,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_to_closest_values(arr):\n",
-    "    closest_values = np.array([-5, -4.5, -4, -3.5, -3, -2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5])\n",
-    "    idx = np.abs(arr[:, None] - closest_values).argmin(axis=1)\n",
-    "    return closest_values[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ldas1 = 10**map_to_closest_values(np.log10(ldas1))\n",
-    "# ldas2 = 10**map_to_closest_values(np.log10(ldas2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
     "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
@@ -218,7 +241,7 @@
     "    row.append(err_2[2])\n",
     "    row.append(err_2[3])\n",
     "\n",
-    "    write_to_csv('1.genome_learning_output/linear.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/linear_test.csv', header, row)"
    ]
   }
  ],
