--- a/separate_errors_each_fold.ipynb
+++ b/separate_errors_each_fold.ipynb
@@ -7,69 +7,61 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the path to your CSV file\n",
-    "csv_file_path = '1.genome_learning_data/errors.csv'\n",
-    "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv(csv_file_path)"
+    "df = pd.read_csv('1.genome_learning_data/errors_base_e.csv')\n",
+    "\n",
+    "# Function to convert string representation of tuples into actual tuples\n",
+    "def convert_to_tuple(cell_value):\n",
+    "    try:\n",
+    "        # Using ast.literal_eval to safely evaluate the string representation of tuples\n",
+    "        return ast.literal_eval(cell_value)\n",
+    "    except (SyntaxError, ValueError):\n",
+    "        # If the cell value cannot be converted, return None or handle it as you prefer\n",
+    "        return None\n",
+    "\n",
+    "# Apply the conversion function to each cell in the DataFrame\n",
+    "for col in df.columns:\n",
+    "    if col != 'sequenceID':\n",
+    "        df[col] = df[col].apply(convert_to_tuple)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert all string into tuple\n",
-    "for i in range(len(df)):\n",
-    "    for j in range(-10, 11):\n",
-    "        if(j%2==0):\n",
-    "            df.at[i, str(int(0.5*j))] = ast.literal_eval(df.iloc[i][str(int(0.5*j))])\n",
-    "        else:\n",
-    "            df.at[i, str(0.5*j)] = ast.literal_eval(df.iloc[i][str(0.5*j)])"
+    "# Create two empty DataFrames with the same columns\n",
+    "df1 = pd.DataFrame(columns=df.columns)\n",
+    "df2 = pd.DataFrame(columns=df.columns)\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    for col in df.columns:\n",
+    "        if col != 'sequenceID':\n",
+    "            col_val = row[col]\n",
+    "            df1.at[index, col] = sum(col_val[0])\n",
+    "            df2.at[index, col] = sum(col_val[1])\n",
+    "df1['sequenceID'] = df['sequenceID']\n",
+    "df2['sequenceID'] = df['sequenceID']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get df for each fold\n",
-    "df_1 = df.copy()\n",
-    "df_2 = df.copy()\n",
-    "df_3 = df.copy()\n",
-    "for i in range(len(df)):\n",
-    "    for j in range(-10, 11):\n",
-    "        if(j%2==0):\n",
-    "            df_1.at[i, str(int(0.5*j))] = sum(df_1.iloc[i][str(int(0.5*j))][0])\n",
-    "            df_2.at[i, str(int(0.5*j))] = sum(df_2.iloc[i][str(int(0.5*j))][1])\n",
-    "            df_3.at[i, str(int(0.5*j))] = sum(df_3.iloc[i][str(int(0.5*j))][0]) + sum(df_3.iloc[i][str(int(0.5*j))][1])\n",
-    "        else:\n",
-    "            df_1.at[i, str(0.5*j)] = sum(df_1.iloc[i][str(0.5*j)][0])\n",
-    "            df_2.at[i, str(0.5*j)] = sum(df_2.iloc[i][str(0.5*j)][1])\n",
-    "            df_3.at[i, str(0.5*j)] = sum(df_3.iloc[i][str(0.5*j)][0]) + sum(df_3.iloc[i][str(0.5*j)][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1.to_csv('1.genome_learning_data/errors_fold1.csv', index=False)\n",
-    "df_2.to_csv('1.genome_learning_data/errors_fold2.csv', index=False)\n",
-    "df_3.to_csv('1.genome_learning_data/errors_total.csv', index=False)"
+    "df1.to_csv('1.genome_learning_data/errors_fold1_base_e.csv', index=False)\n",
+    "df2.to_csv('1.genome_learning_data/errors_fold2_base_e.csv', index=False)"
    ]
   }
  ],
