--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "# IMPORT\n",
+    "import numpy as np\n",
     "from joblib import Parallel, delayed\n",
     "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, error_count, write_to_csv, opart"
    ]
@@ -30,7 +31,7 @@
     "    labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "    # lambda candidates\n",
-    "    ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
+    "    ldas = [np.e**element for element in [x/4 for x in range(-28, 29)]]\n",
     "\n",
     "    for i in range(len(seqs)):\n",
     "        # generate data\n",
@@ -38,11 +39,11 @@
     "\n",
     "        # run each lambda and record it into csv file\n",
     "        row  = [seqs[i][0]]\n",
-    "        errs = Parallel(n_jobs=32)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "        errs = Parallel(n_jobs=16)(delayed(try_lambda)(i) for i in range(0, len(ldas)))\n",
     "        row += errs\n",
     "\n",
-    "        header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
-    "        write_to_csv('1.genome_learning_data/errors.csv', header, row)"
+    "        header = ['sequenceID'] + [str(num) for num in [x/4 for x in range(-28, 29)]]\n",
+    "        write_to_csv('1.genome_learning_data/errors_base_e.csv', header, row)"
    ]
   }
  ],
