--- a/lambda_learning_linear.ipynb
+++ b/lambda_learning_linear.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x24d6ebbb330>"
+       "<torch._C.Generator at 0x25441abb330>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +40,8 @@
     "data = np.log(np.log(data)).reshape(-1,1)\n",
     "data = torch.FloatTensor(data)\n",
     "\n",
-    "target_df_1 = pd.read_csv('1.genome_learning_data/target_lambda_fold1.csv')\n",
-    "target_df_2 = pd.read_csv('1.genome_learning_data/target_lambda_fold2.csv')\n",
+    "target_df_1 = pd.read_csv('1.genome_learning_data/target_lambda_fold1_base_e.csv')\n",
+    "target_df_2 = pd.read_csv('1.genome_learning_data/target_lambda_fold2_base_e.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,33 +75,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch     0, Loss_1:   2.3556, Loss_1_test:   2.1364, Loss_2:   1.8813, Loss_2_test:   1.9977\n",
-      "Epoch    50, Loss_1:   2.0690, Loss_1_test:   1.9265, Loss_2:   1.7379, Loss_2_test:   1.7776\n",
-      "Epoch   100, Loss_1:   1.8537, Loss_1_test:   1.7819, Loss_2:   1.6439, Loss_2_test:   1.6182\n",
-      "Epoch   150, Loss_1:   1.6919, Loss_1_test:   1.6846, Loss_2:   1.5778, Loss_2_test:   1.4968\n",
-      "Epoch   200, Loss_1:   1.5613, Loss_1_test:   1.6117, Loss_2:   1.5315, Loss_2_test:   1.4032\n",
-      "Epoch   250, Loss_1:   1.4506, Loss_1_test:   1.5526, Loss_2:   1.5162, Loss_2_test:   1.3562\n",
-      "Epoch   300, Loss_1:   1.3610, Loss_1_test:   1.5093, Loss_2:   1.5126, Loss_2_test:   1.3360\n",
-      "Epoch   350, Loss_1:   1.3113, Loss_1_test:   1.5017, Loss_2:   1.5115, Loss_2_test:   1.3251\n",
-      "Epoch   400, Loss_1:   1.2840, Loss_1_test:   1.5101, Loss_2:   1.5108, Loss_2_test:   1.3175\n",
-      "Epoch   450, Loss_1:   1.2627, Loss_1_test:   1.5215, Loss_2:   1.5105, Loss_2_test:   1.3117\n",
-      "Epoch   500, Loss_1:   1.2451, Loss_1_test:   1.5346, Loss_2:   1.5103, Loss_2_test:   1.3083\n",
-      "Epoch   550, Loss_1:   1.2308, Loss_1_test:   1.5489, Loss_2:   1.5102, Loss_2_test:   1.3083\n",
-      "Epoch   600, Loss_1:   1.2194, Loss_1_test:   1.5639, Loss_2:   1.5100, Loss_2_test:   1.3083\n",
-      "Epoch   650, Loss_1:   1.2105, Loss_1_test:   1.5790, Loss_2:   1.5099, Loss_2_test:   1.3085\n",
-      "Epoch   700, Loss_1:   1.2037, Loss_1_test:   1.5938, Loss_2:   1.5098, Loss_2_test:   1.3086\n",
-      "Epoch   750, Loss_1:   1.1985, Loss_1_test:   1.6080, Loss_2:   1.5097, Loss_2_test:   1.3087\n",
-      "Epoch   800, Loss_1:   1.1947, Loss_1_test:   1.6212, Loss_2:   1.5096, Loss_2_test:   1.3089\n",
-      "Epoch   850, Loss_1:   1.1919, Loss_1_test:   1.6333, Loss_2:   1.5094, Loss_2_test:   1.3090\n",
-      "Epoch   900, Loss_1:   1.1899, Loss_1_test:   1.6443, Loss_2:   1.5093, Loss_2_test:   1.3092\n",
-      "Epoch   950, Loss_1:   1.1885, Loss_1_test:   1.6540, Loss_2:   1.5091, Loss_2_test:   1.3093\n"
+      "Epoch     0, Loss_1:   3.3376, Loss_1_test:   3.0308, Loss_2:   2.8394, Loss_2_test:   3.0363\n",
+      "Epoch  1000, Loss_1:   2.9092, Loss_1_test:   2.7616, Loss_2:   2.6496, Loss_2_test:   2.6954\n",
+      "Epoch  2000, Loss_1:   2.6138, Loss_1_test:   2.6095, Loss_2:   2.5712, Loss_2_test:   2.5055\n",
+      "Epoch  3000, Loss_1:   2.4283, Loss_1_test:   2.5496, Loss_2:   2.5524, Loss_2_test:   2.4204\n",
+      "Epoch  4000, Loss_1:   2.3185, Loss_1_test:   2.5586, Loss_2:   2.5501, Loss_2_test:   2.3899\n",
+      "Epoch  5000, Loss_1:   2.2533, Loss_1_test:   2.6162, Loss_2:   2.5500, Loss_2_test:   2.3858\n",
+      "Epoch  6000, Loss_1:   2.2210, Loss_1_test:   2.6971, Loss_2:   2.5498, Loss_2_test:   2.3859\n",
+      "Epoch  7000, Loss_1:   2.2198, Loss_1_test:   2.7202, Loss_2:   2.5495, Loss_2_test:   2.3858\n",
+      "Epoch  8000, Loss_1:   2.2196, Loss_1_test:   2.7316, Loss_2:   2.5490, Loss_2_test:   2.3863\n",
+      "Epoch  9000, Loss_1:   2.2196, Loss_1_test:   2.7347, Loss_2:   2.5485, Loss_2_test:   2.3878\n",
+      "Epoch 10000, Loss_1:   2.2196, Loss_1_test:   2.7349, Loss_2:   2.5478, Loss_2_test:   2.3888\n"
      ]
     }
    ],
@@ -110,14 +101,14 @@
     "model1 = LinearModel(input_size = 1)\n",
     "model2 = LinearModel(input_size = 1)\n",
     "\n",
-    "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001)\n",
-    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001)\n",
+    "squared_hinge_loss = SquaredHingeLoss(margin=1.5, low_lim=-8, high_lim=8)\n",
+    "optimizer1 = optim.Adam(model1.parameters(), lr=0.0001)\n",
+    "optimizer2 = optim.Adam(model2.parameters(), lr=0.0001)\n",
     "\n",
     "# Training loop\n",
     "min_loss_1_test = float('inf')\n",
     "min_loss_2_test = float('inf')\n",
-    "for epoch in range(1000):\n",
+    "for epoch in range(10001):\n",
     "    # Forward pass\n",
     "    outputs1 = model1(data)\n",
     "    outputs2 = model2(data)\n",
@@ -148,13 +139,13 @@
     "        torch.save(model2.state_dict(), '1.genome_saved_models/model2_linear_best.pth')\n",
     "    \n",
     "    # Print the loss every 100 epochs\n",
-    "    if (epoch) % 50 == 0:\n",
+    "    if (epoch) % 1000 == 0:\n",
     "        print(f'Epoch {epoch:5d}, Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +166,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,18 +185,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter: fc1.weight, Value: tensor([[-0.1333]])\n",
+      "Parameter: fc1.bias, Value: tensor([0.3075])\n"
+     ]
+    }
+   ],
    "source": [
-    "with torch.no_grad():\n",
-    "    ldas1 = model1(data).numpy().reshape(-1)\n",
-    "    ldas2 = model2(data).numpy().reshape(-1)"
+    "for name, param in model1.named_parameters():\n",
+    "    print(f\"Parameter: {name}, Value: {param.data}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter: fc1.weight, Value: tensor([[-0.2770]])\n",
+      "Parameter: fc1.bias, Value: tensor([0.5791])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, param in model2.named_parameters():\n",
+    "    print(f\"Parameter: {name}, Value: {param.data}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    ldas1 = np.e**(model1(data).numpy()).reshape(-1)\n",
+    "    ldas2 = np.e**(model2(data).numpy()).reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +246,6 @@
     "for i in range(len(seqs)):\n",
     "    # generate data\n",
     "    sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
-    "    sequence_length = len(sequence)-1\n",
     "\n",
     "    # get total labels\n",
     "    fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
@@ -226,8 +254,8 @@
     "    # run each lambda and record it into csv file\n",
     "    row = [seqs[i][0], fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "    chpnt_fold1 = opart(10**ldas2[i], sequence)\n",
-    "    chpnt_fold2 = opart(10**ldas1[i], sequence)\n",
+    "    chpnt_fold1 = opart(ldas2[i], sequence)\n",
+    "    chpnt_fold2 = opart(ldas1[i], sequence)\n",
     "\n",
     "    err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
@@ -241,7 +269,7 @@
     "    row.append(err_2[2])\n",
     "    row.append(err_2[3])\n",
     "\n",
-    "    write_to_csv('1.genome_learning_output/linear_test.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/linear.csv', header, row)"
    ]
   }
  ],
