--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -11,6 +11,8 @@
     "import gzip\n",
     "import csv\n",
     "import os\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
     "\n",
     "np.set_printoptions(precision=2)\n",
     "np.random.seed(123)"
@@ -489,15 +491,18 @@
    "outputs": [],
    "source": [
     "# Custom loss function\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
     "class SquaredHingeLoss(nn.Module):\n",
+    "    def __init__(self, margin=1, low_lim=-7, high_lim=7):\n",
+    "        super(SquaredHingeLoss, self).__init__()\n",
+    "        self.margin = margin\n",
+    "        self.low_lim  = low_lim\n",
+    "        self.high_lim = high_lim\n",
+    "\n",
     "    def forward(self, predicted, y):\n",
-    "        low, high = y[:,0], y[:,1]\n",
-    "        margin = 1\n",
-    "        loss_low  = torch.relu(low  - predicted + margin)*torch.sign(low + 5)\n",
-    "        loss_high = torch.relu(predicted - high + margin)*torch.sign(5 - high)\n",
+    "        low, high = y[:, 0], y[:, 1]\n",
+    "        margin = self.margin\n",
+    "        loss_low = torch.relu(low - predicted + margin) * torch.sign(low - self.low_lim)\n",
+    "        loss_high = torch.relu(predicted - high + margin) * torch.sign(self.high_lim - high)\n",
     "        loss = loss_low + loss_high\n",
     "        return torch.mean(torch.square(loss), dtype=torch.float)"
    ]
